@@ -264,7 +264,9 @@ function check_reseller_data($reseller_id, $rip_lst, $reseller_ips) {
 	if ($err == '_off_') {
 		// if ($uals_max != $rals_current && $uals_current > 0)
 		if ($uals_current != $rals_current && $rals_max > 0) {
-			$err = tr('Inconsistency between current_als_cnt and actual alias count: %1$d != %2$d', $uals_current, $rals_current);
+			$err	 = tr('Inconsistency between current_als_cnt and actual alias count: %1$d != %2$d', $uals_current, $rals_current);
+			$err	.= tr("! Trying to correct!");
+			update_reseller_c_props($reseller_id);
 		} else {
 			calculate_new_reseller_vals($reseller_max_alias_cnt, $rals_current, $rals_max, $uals_current, $uals_max, $uals_uf, $err, tr('Aliases'));
 		}
@@ -283,7 +285,9 @@ function check_reseller_data($reseller_id, $rip_lst, $reseller_ips) {
 
 	if ($err == '_off_') {
 		if ($uftp_current != $rftp_current && $rftp_max > 0) {
-			$err = tr('Inconsistency between current_ftp_cnt and actual ftp count: %1$d != %2$d', $uftp_current, $rftp_current);
+			$err	 = tr('Inconsistency between current_ftp_cnt and actual ftp count: %1$d != %2$d', $uftp_current, $rftp_current);
+			$err	.= tr("! Trying to correct!");
+			update_reseller_c_props($reseller_id);
 		} else {
 			calculate_new_reseller_vals($reseller_max_ftp_cnt, $rftp_current, $rftp_max, $uftp_current, $uftp_max, $uftp_uf, $err, tr('FTP'));
 		}
